# Facial_expression_cpp

./: .gitignore  CMakeLists.txt  benchmark.cpp  compile.sh  facialExp.cpp  facialExp.h  main.cpp
model/: scn.param  simp_model_v4.param
ncnn/include/: layer_declaration.h  layer_registry_avx2.h  platform.h
opencv/include/opencv2/: opencv.hpp
